--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: monospace;
   font-size: 16px;
   line-height: 1;
+  background-color: #dac2c2;
 }
 
 textarea {
@@ -16,9 +17,10 @@ textarea {
 .jumbotron {
   text-align: center;
   background-color: transparent;
-  color: black;
+  color:coral;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 10px solid rosybrown;
+  background-color: beige;
 }
 
 .description {
@@ -27,41 +29,38 @@ textarea {
 
 .time-block {
   text-align: center;
-  border-radius: 15px;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;
+  border-top: 1px solid black;
 }
 
 .hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+  background-color: black;
+  color: beige;
+  border-top: 1px dashed beige;
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: rosybrown;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: beige;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: burlywood;
   color: white;
 }
 
 .saveBtn {
   border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color:wheat;
   color: white;
 }
 
